--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ html, body{
     width: 100%;
     height: 100vh;
     background-color: black;
+    /* overflow-x: hidden; */
 }
 
 .home{
@@ -862,20 +863,6 @@ margin-left: 0vw;
     width: 80%;
     height: 105vh;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     .full_div1 h1{
         font-size: 15vw;
     }
@@ -886,4 +873,816 @@ margin-left: 0vw;
         grid-template-columns: repeat(3, 1fr);
     }
 
+}
+
+
+@media (min-width:421px) and (max-width:600px){
+  .rightSide2{
+    display: none;
+  }
+
+  #menuIcon{
+    display: block;
+    width: 100%;
+  }
+
+  /* .navbar img{
+    width: 10vw;
+    height: 10vw;
+  } */
+
+  .Home{
+    margin-top: 8rem;
+    flex-direction:column-reverse;
+    width: 100%;  
+    margin-left: 1vw;
+    
+  }
+
+  .myImage{
+    overflow: hidden;
+    width:20rem;
+    height: 20rem;
+    margin-right: 2vw;
+}
+
+.mainTxt{
+    margin-left: 0rem;
+    margin-top: 3.5rem;
+}
+
+.mainTxt h2{
+
+    font-size: 10vw;
+line-height: 1;
+letter-spacing: -0.05em;
+
+}
+
+.mainTxt h1{
+    font-size: 12vw; /* 60px */
+line-height: 1;
+}
+
+.buttons{
+    color: black;
+    width: 100%;
+    margin-top: 1rem;
+}
+
+.buttons button{
+    width: 50%;
+}
+
+.about{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 0vh;
+    width: 100%;
+}
+
+.anotherImage{
+    width: 60%;
+    padding-left: 1vw;
+    margin-left: 12vw;
+    margin-right: 12vw;
+
+}
+
+.anotherImage img{
+    width: 100%;
+    height: 100%;
+}
+
+.aboutMsg h1{
+    font-size: 8vw;
+    margin-top: 5vw;
+}
+
+.msg{
+font-size: 4vw;
+/* text-align: center; */
+}
+
+.skills h1{
+    text-align: center;
+    font-size: 2.25rem; /* 36px */
+    margin-left: 0vw;
+line-height: 2.5rem; /* 40px */
+}
+
+.skills h2{
+    font-size: 1.5rem; /* 24px */
+line-height: 2rem; /* 32px */
+text-align: center;
+margin-top: 2vw;
+margin-left: 0vw;
+}
+
+.skills{
+    width: 100%;
+    color: white;
+}
+
+
+
+.skillImg img{
+    width: 6rem;
+    height: 6rem;
+}
+
+.mainDiv{
+    margin-top: 10vw;
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+}
+.mainDiv h1{
+    font-family: Gil;
+    font-size: 10vw;
+    position: absolute;
+    color: #fff;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#top_h1{
+    top: 100%;
+}
+
+#bottom_h1{
+    top: 0% !important;
+}
+
+.top{
+    width: 100%;
+    height: 50%;
+    background-color: black;
+    position: absolute;
+    top: 0;
+    overflow: hidden;
+    z-index: 10;
+}
+
+.center{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: linear-gradient(to bottom, #1d0f0f, #753a3a, #1d0f0f);
+    transition: all cubic-bezier(0.19, 1, 0.22, 1)1s;
+    overflow: hidden;
+}
+
+.content{
+    margin-top: 60vh;
+    width: 100%;
+    height: 100vh;
+    color: #fff;
+    gap: 4vh;
+}
+
+.content h4{
+    font-size: 6vw;
+}
+
+.content h3{
+    width: 44%;
+    font-size: 8vw;
+}
+
+.content .btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25vw;
+    height: 15vw;
+    border-radius: 50px;
+    background-color: #fff;
+    color: #0d0d0d;
+
+    font-size: 10vw;
+}
+
+.btn button{
+    outline: none;
+    border: none;
+    background-color: white;
+    height: 5vh;
+    font-weight: bolder;
+    border-radius: 50px;
+}
+
+/* .btn h5{
+    /* line-height: 1vw; */
+ /*s   font-size: 1vw;
+} */
+
+.content h2{
+    font-size: 20vw;
+}
+
+
+.marquee{
+    width: 99%;
+    margin-top: 5rem;
+    padding: 30px 0;
+    background-color: black;
+    color: white;
+    font-size: 10vw;
+    font-weight: bold;
+    overflow: hidden;
+}
+
+#Contact{
+    color: white;
+    margin-top: 5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    height: 140vh;
+
+}
+
+.hire{
+    display: flex;
+    flex-direction: column-reverse;
+    width: 100%;
+}
+
+
+.Txt form button{
+    margin-top: 4vw;
+}
+
+
+#pic{
+    margin-top: 6vw;
+    margin-right: 5vw;
+    margin-left: 10vw;
+    width:16rem;
+    height: 18rem;
+}
+
+.resume{
+
+    width: 80%;
+    height: 105vh;
+}
+    .full_div1 h1{
+        font-size: 15vw;
+    }
+    .rightSide2{
+        display: none;
+    }
+    .skillImg {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+
+
+    
+   
+}
+
+
+/* Tablet Styles (Small to Medium Screens) */
+@media (min-width: 601px) and (max-width: 1023px) {
+    .rightSide2{
+        width: 60%;
+        margin-right: 2rem;
+    }
+    
+    .rightSide2 a{
+        font-size: 3vw;
+    }
+    
+    .Home{
+        margin-top: 18rem;
+        width: 100%;   
+        margin-left: 0vw;
+        
+    }
+    
+    .myImage{
+        width: 20rem;
+        height: 20rem;
+    }
+
+    
+    
+    .mainTxt{
+        margin-left: 1.25rem;
+        margin-top: 2.5rem;
+    }
+    
+    .mainTxt h2{
+    line-height: 2;
+    letter-spacing: -0.05em;
+    
+    }
+
+    
+    .buttons button{
+        width: 50%;
+    }
+    
+    .about{
+        flex-direction: column;
+    }
+    
+    .anotherImage{
+        width: 80%;
+    }
+ 
+    .aboutMsg h1{
+        font-size: 7vw;
+        text-align: center;
+        margin-top: 3vh;
+    }
+    
+    .msg{
+    font-size: 3vw;
+    }
+
+    .skills{
+        color: white;
+        margin-top: 5rem;
+    }
+    
+  
+    
+    .skills{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+
+
+    
+    .mainDiv{
+        height: 100vh;
+        position: relative;
+        overflow: hidden;
+    }
+    .mainDiv h1{
+        font-family: Gil;
+        font-size: 18vw;
+        position: absolute;
+        color: #fff;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    
+    #top_h1{
+        top: 100%;
+    }
+    
+    #bottom_h1{
+        top: 0% !important;
+    }
+    
+    .top{
+        width: 100%;
+        height: 50%;
+        background-color: black;
+        position: absolute;
+        top: 0;
+        overflow: hidden;
+        z-index: 10;
+    }
+    
+    .center{
+        position: relative;
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background: linear-gradient(to bottom, #1d0f0f, #753a3a, #1d0f0f);
+        transition: all cubic-bezier(0.19, 1, 0.22, 1)1s;
+        overflow: hidden;
+    }
+    
+
+    .content{
+        margin-top: 60vh;
+        width: 100%;
+        height: 100vh;
+        color: #fff;
+        gap: 4vh;
+    }
+    
+    .content h4{
+        font-size: 6vw;
+    }
+    
+    .content h3{
+        width: 44%;
+        font-size: 8vw;
+    }
+    
+    .content .btn{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 25vw;
+        height: 15vw;
+        border-radius: 50px;
+        background-color: #fff;
+        color: #0d0d0d;
+    
+        font-size: 10vw;
+    }
+    
+    .btn button{
+        outline: none;
+        border: none;
+        background-color: white;
+        height: 5vh;
+        font-weight: bolder;
+        border-radius: 50px;
+        font-size: 3.5vw;
+    }
+    
+    
+    .content h2{
+        font-size: 16vw;
+    }
+    #Projects{
+        position: relative;
+        border-radius: 10px; 
+        overflow: hidden;
+        width: 100%; 
+        transition: transform 0.3s ease;
+    }
+    
+    
+    .marquee{
+        width: 100%;
+        margin-top: 5rem;
+        padding: 30px 0;
+        background-color: black;
+        color: white;
+        font-size: 10vw;
+        font-weight: bold;
+        overflow: hidden;
+    }
+
+    #Contact{
+        color: white;
+        margin-top: 5rem;
+        margin-left: 3rem;
+        margin-right: 5rem;
+        width: 92%;
+        height: 100vh;
+    
+    }
+    
+    .hire{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+    .Txt{
+        color: white;
+        width: 100%;
+        /* padding-left: 2.5rem; */
+        margin-top: 2.5rem;
+        text-align: center;
+    }
+    
+    .Txt h1{
+        font-size: 2.25rem; /* 36px */
+        line-height: 2.5rem; /* 40px */
+        text-align: center;
+        margin-top: 2.5rem;
+    }
+    
+    .Txt form{
+        margin-top: 1rem;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin-top: 2.5rem;
+    
+    }
+    
+    #Name, #Email, #Subject, #Message{
+        margin-top: 10px;
+        padding: 20px 30px;
+        width: 100%;
+        border-color: gray;
+        color: black;
+        border: 2px solid black;
+        border-radius: 0.375rem;
+    }
+    
+    .Txt form button{
+        width: 50%;
+        text-align: center;
+        background-color: slategray;
+        color: white;
+        font-weight: bold;
+        padding: 10px 10px;
+        border-radius: 0.375rem;
+        margin-top: 1vw;
+        transition: all .3s ease-in-out;
+    }
+    
+    .Txt form button:hover{
+        background-color: #753a3a;
+    }
+    
+    #pic{
+        margin-top: 6vw;
+        margin-right: 5vw;
+        margin-left: 10vw;
+        width:40rem;
+        height: 25rem;
+    }
+    
+    
+    
+}
+
+/* Desktop Styles (Large Screens) */
+@media (min-width:1024px) and (max-width:1439px){
+
+    .anotherImage{
+        width: 150%;
+    }
+    .aboutMsg h1{
+        font-size: 4vw;
+        text-align: center;
+    }
+    
+    .msg{
+    line-height: 2.25rem; /* 36px */
+    margin-left: 2.5rem;
+    font-size: 2vw;
+        margin-right: 0vw;
+        margin-top: 2rem;
+    }
+
+    .content{
+        margin-top: 60vh;
+        width: 100%;
+        height: 100vh;
+        color: #fff;
+        gap: 4vh;
+    }
+    
+    .content h4{
+        font-size: 6vw;
+    }
+    
+    .content h3{
+        width: 44%;
+        font-size: 8vw;
+    }
+    
+    .content .btn{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 25vw;
+        height: 15vw;
+        border-radius: 50px;
+        background-color: #fff;
+        color: #0d0d0d;
+    
+        font-size: 10vw;
+    }
+    
+    .btn button{
+        outline: none;
+        border: none;
+        background-color: white;
+        height: 5vh;
+        font-weight: bolder;
+        border-radius: 50px;
+        font-size: 3.5vw;
+    }
+    
+    
+    .content h2{
+        font-size: 16vw;
+    }
+    #Projects{
+        position: relative;
+        border-radius: 10px; 
+        overflow: hidden;
+        width: 100%; 
+        transition: transform 0.3s ease;
+    }
+    
+    
+    .marquee{
+        width: 100%;
+        margin-top: 5rem;
+        padding: 30px 0;
+        background-color: black;
+        color: white;
+        font-size: 6vw;
+        font-weight: bold;
+        overflow: hidden;
+    }
+
+    #Contact{
+        color: white;
+        margin-top: 5rem;
+        margin-left: 3rem;
+        margin-right: 1rem;
+        height: 140vh;
+    
+    }
+    
+    .hire{
+        display: flex;
+        flex-direction: column-reverse;
+        width: 100%;
+    }
+    
+    
+    .Txt form button{
+        margin-top: 4vw;
+        width: 50%;
+        text-align: center;
+        background-color: slategray;
+        color: white;
+        font-weight: bold;
+        font-size: 3vw;
+    }
+    
+    
+    
+    #pic{
+        margin-top: 6vw;
+        margin-right: 5vw;
+        margin-left: 10vw;
+        width:26rem;
+        height: 26rem;
+    }
+
+    #Name, #Email, #Subject, #Message{
+        margin-top: 10px;
+        padding: 20px 30px;
+        font-size: 3vw;
+        width: 100%;
+        border-color: gray;
+        color: black;
+        border: 2px solid black;
+        border-radius: 0.375rem;
+    }
+    
+    .text{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        z-index: 99;
+        line-height: 7vw;
+    }
+    
+    .text .h11{
+        text-align: center;
+        font-family: Gilroy;
+        color: #fff;
+        font-size: 6vw;
+        font-weight: 400;
+    }
+    
+    .h1 {
+        font-size: 4vw;
+        color: #fff;
+        font-family: Gilroy;
+        font-weight: 400;
+        position: relative;
+        border-bottom: 5px solid transparent; 
+        transition: border-bottom-width 0.5s, border-bottom-color 0.5s; 
+        overflow: hidden; 
+        cursor: pointer;
+    }
+    
+    .re{
+        display: flex;
+        flex-direction: column;
+        margin-top: 40vw;
+        transform-origin: top;
+        width: 100%;
+    }
+    
+
+    
+
+    
+}
+
+@media (width:1280px) and (height:800px) {
+    .content{
+        margin-top: 60vh;
+        width: 100%;
+        height: 100vh;
+        color: #fff;
+        gap: 4vh;
+    }
+    
+    .content h4{
+        font-size: 2vw;
+    }
+    
+    .content h3{
+        width: 44%;
+        font-size: 4vw;
+    }
+    
+    .content .btn{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 25vw;
+        height: 7vw;
+        border-radius: 50px;
+        background-color: #fff;
+        color: #0d0d0d;
+    
+        font-size: 5vw;
+    }
+    
+    .btn button{
+        outline: none;
+        border: none;
+        background-color: white;
+        height: 5vh;
+        font-weight: bolder;
+        border-radius: 50px;
+        font-size: 3vw;
+    }
+    
+    
+    .content h2{
+        font-size: 16vw;
+    }
+}
+
+@media (width:1024px) and (height:600px) {
+    .content{
+        margin-top: 60vh;
+        width: 100%;
+        height: 100vh;
+        color: #fff;
+        gap: 4vh;
+    }
+    
+    .content h4{
+        font-size: 2vw;
+    }
+    
+    .content h3{
+        width: 44%;
+        font-size: 4vw;
+    }
+    
+    .content .btn{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 25vw;
+        height: 10vw;
+        border-radius: 50px;
+        background-color: #fff;
+        color: #0d0d0d;
+    
+        font-size: 3vw;
+    }
+    
+    .btn button{
+        outline: none;
+        border: none;
+        background-color: white;
+        height: 5vh;
+        font-weight: bolder;
+        border-radius: 50px;
+        font-size: 3vw;
+    }
+    
+    
+    .content h2{
+        font-size: 16vw;
+    }
 }
