--- a/style.css
+++ b/style.css
@@ -203,6 +203,9 @@ body {
 }
 
 .buttons {
+    gap: 5vw;
+    display: flex;
+    align-items: center;
     color: black;
     width: 100%;
     margin-top: 1rem;
@@ -218,6 +221,24 @@ body {
     /* 30px */
     line-height: 2.25rem;
     /* 36px */
+}
+
+/* .link{
+    gap: 2vw;
+    font-size: 13vw;
+    color: white;
+} */
+
+.link{
+    display: flex;
+    align-items: center;
+    gap: 2vw;
+    font-size: 3vw;
+}
+
+.link a{
+    text-decoration: none;
+    color: white;
 }
 
 .about {
@@ -806,7 +827,7 @@ body {
         margin-top: 8rem;
         flex-direction: column-reverse;
         width: 100%;
-        margin-left: 1vw;
+        margin-left: 0;
 
     }
 
@@ -848,6 +869,11 @@ body {
         height: 4rem;
         font-weight: bold;
         font-size: 1.8rem;
+    }
+
+    .link{
+        gap: 5vw;
+        font-size: 10vw;
     }
 
     .about {
@@ -1146,6 +1172,11 @@ body {
         width: 50%;
     }
 
+    .link{
+        gap: 5vw;
+        font-size: 11vw;
+    }
+
     .about {
         flex-direction: column;
         align-items: center;
@@ -1405,7 +1436,10 @@ body {
         height: 20rem;
     }
 
-
+    .link{
+        gap: 3vw;
+        font-size: 6vw;
+    }
 
     .mainTxt {
         margin-left: 1.25rem;
@@ -1418,9 +1452,12 @@ body {
 
     }
 
+    .buttons{
+        gap: 3vw;
+    }
 
     .buttons button {
-        width: 50%;
+        width: 70%;
     }
 
     .about {
@@ -1652,6 +1689,8 @@ body {
         font-size: 2.5 rem;
     }
 
+
+
     .anotherImage {
         width: 150%;
     }
@@ -1857,6 +1896,10 @@ body {
         border-radius: 50px;
         font-size: 3vw;
     }
+    .link{
+        gap: 3vw;
+        font-size: 4vw;
+    }
 
 
     .content h2 {
@@ -1865,6 +1908,9 @@ body {
 }
 
 @media (width:1024px) and (height:600px) {
+    .Home{
+        margin-top: 5rem;
+    }
     .content {
         margin-top: 60vh;
         width: 100%;
